# e-commerce

./: .coverage  README.md  flake8  pyproject.toml
src/: main.py  product_category.py
tests/: conftest.py  test_prod_cat.py
