[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["rafaelmanasyan <workpageraf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
isort = "^5.13.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
